terraform/modules/vpc/internet_gateways.tf
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/internet_gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "p-app-igw"
  }

  depends_on = [aws_vpc.vpc]
}
